# strategies

./: README.md  pyproject.toml
src/entry/: __init__.py  dynamic_gradient.py
tests/test_entry/: conftest.py  test_dynamic_gradient.py
