[tool.poetry]
name = "strategies"
version = "0.1.0"
description = ""
authors = ["Evgeny Aleshin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.develop.dependencies]
matplotlib = "^3.8.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
